# dining_philosophers

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml
dining_philosophers/: constants.py  exceptions.py  forks.py  main.py  philosophers.py  table.py
dinning_philosophers/: forks.py  philosophers.py
tests/: conftest.py  test_dining_philosophers.py  test_dinning_philosophers.py  test_forks.py  test_main.py  test_philosophers.py  test_table.py
