[tool.poetry]
name = "dinning_philosophers"
version = "0.1.0"
description = ""
authors = ["Lievi Silva <lievi.silva@luizalabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"
mypy = "^0.782"
bandit = "^1.6.2"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
